# esp32s3-ble-wifi-status

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT_RESUME_AND_INTERVIEW.md  README.md  build_low_memory.ps1  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ble_protocol.md  idf_component.yml  main.c  mesh_audio_controller.c  mesh_audio_maintain.md
main/app/: mesh_audio_controller.c  mesh_audio_controller.h  mesh_audio_gateway.c  mesh_audio_gateway.h  mesh_audio_speaker.c  mesh_audio_speaker.h
main/common/: app_config.c  app_config.h  app_log.h  cloud_service.c  cloud_service.h  mesh_audio_model.h  ota_service.c  ota_service.h  ui_status.c  ui_status.h
main/drivers/: display_st7789.c  display_st7789.h  font_gb2312.c  font_gb2312.h  mesh_audio_board.c  mesh_audio_board.h  wifi_manager.c  wifi_manager.h
main/middle/: ble_provision.c  ble_provision.h  blufi_security.c  blufi_security.h  mesh_audio_node.c  mesh_audio_node.h
